# planer

./: .gitignore  .golangci.yml  Makefile  README.md  SPECIFICATION.md  go.mod  go.sum
cmd/healthcheck/: main.go
cmd/planerd/: main.go
deployments/: docker-compose.yaml
desktop/planer/: CMakeLists.txt  main.cpp
desktop/planer/qml/: Main.qml
desktop/planer/qml/components/: ComponentStatusRow.qml  EmptyState.qml  LoadingOverlay.qml  PriorityBadge.qml  SectionHeader.qml  StatusBadge.qml  TaskCard.qml  TaskKeyLabel.qml  ToastHost.qml
desktop/planer/qml/dialogs/: CommandPaletteStub.qml  CreateProjectDialog.qml  CreateTaskDialog.qml  HealthCheckDialog.qml
desktop/planer/qml/theme/: PlanerTheme.qml
desktop/planer/qml/views/: SettingsPage.qml
desktop/planer/qml/views/auth/: LoginPage.qml  RegisterPage.qml
desktop/planer/qml/views/shell/: MainShell.qml  MainShellLayout.qml  ProjectSidebar.qml  TaskDetailPanel.qml
desktop/planer/qml/views/tasks/: GanttView.qml  KanbanView.qml  TaskListView.qml
desktop/planer/src/core/: ApiError.cpp  ApiError.hpp  Config.cpp  Config.hpp  TokenStorage.cpp  TokenStorage.hpp
desktop/planer/src/data/api/: HttpClient.cpp  HttpClient.hpp
desktop/planer/src/data/api/client/dto/: HealthDto.cpp
desktop/planer/src/data/api/client/http/: PlanerHttpClient.cpp  PlanerHttpClient.hpp
desktop/planer/src/data/api/client/mappers/: HealthMapper.cpp  HealthMapper.hpp
desktop/planer/src/data/api/client/mock/: MockPlanerApiClient.cpp  MockPlanerApiClient.hpp
desktop/planer/src/data/dto/: HealthDto.cpp  HealthDto.hpp
desktop/planer/src/data/mappers/: HealthMapper.cpp  HealthMapper.hpp
desktop/planer/src/data/repositories/: HealthRepository.cpp  HealthRepository.hpp
desktop/planer/src/domain/entities/: AuthResult.hpp  Enums.cpp  Enums.hpp  HealthStatus.cpp  HealthStatus.hpp  Paginated.hpp  Project.hpp  Task.hpp  User.hpp
desktop/planer/src/domain/ports/: IHealthRepository.hpp  IPlanerApiClient.hpp
desktop/planer/src/domain/usecases/: CheckHealthUseCase.cpp  CheckHealthUseCase.hpp
desktop/planer/src/presentation/: AppContext.cpp  AppContext.hpp
desktop/planer/src/presentation/mappers/: EntityMapper.cpp  EntityMapper.hpp
desktop/planer/src/presentation/viewmodels/: AppViewModel.cpp  AppViewModel.hpp  GanttViewModel.cpp  GanttViewModel.hpp  HealthViewModel.cpp  HealthViewModel.hpp  KanbanViewModel.cpp  KanbanViewModel.hpp  ProjectsViewModel.cpp  ProjectsViewModel.hpp  SessionViewModel.cpp  SessionViewModel.hpp  TaskDetailViewModel.cpp  TaskDetailViewModel.hpp  TasksViewModel.cpp  TasksViewModel.hpp
docs/: docs.go  static-build.md  swagger.json  swagger.yaml
internal/api/http/: router.go  router_test.go
internal/api/http/dto/: health.go
internal/api/http/handlers/: health.go  health_test.go  json.go
internal/api/http/middleware/: logging.go
internal/app/: planerd.go
internal/config/: config.go
internal/core/ports/: pinger.go
internal/core/ports/mocks/: pinger_mock.go
internal/repository/minio/: storage.go
internal/repository/postgres/: postgres.go
migrations/: 20250624000001_init.go
scripts/: static-build.sh  static-deb.sh
